testsuite/tests/rename/should_compile/T3823B.hs
module T3823B where

import {-# SOURCE #-} T3823A

data B = A A

a = x (X True)
b = y a
