testsuite/tests/rename/should_fail/T19781.hs
module T19781 where

import {-# SOURCE #-} T19781_A

z :: Int
z = x + y
